# lrc2video

./: .env.example  .gitignore  PYTHON_SETUP.md  README.md  _create_launch.py  app.py  config.py  pyproject.toml
core/: __init__.py  image_generator.py  lrc_parser.py  prompt_generator.py  subtitle_renderer.py  video_assembler.py  video_generator.py
examples/: 晴天.lrc
examples/1a42783bb690b3dd/: prompts.json  state.json
models/: __init__.py  dynamicrafter_wrapper.py  flux_wrapper.py  rife_wrapper.py  svd_wrapper.py  tooncrafter_wrapper.py
utils/: __init__.py  ffmpeg_utils.py  file_utils.py
